# pycppegg

./: CMakeLists.txt  README.md  cpptest.cc  cpptest.h  test.egg
src/: CMakeLists.txt  __init__.py  pycpptest.cc
tests/: test_import.py
